<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/btnGoToSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_second_activity" />


            <!-- Botón para LinearLayoutActivity -->
            <Button
                android:id="@+id/btnLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/linearlayout"
                android:layout_marginTop="16dp" />

            <!-- Botón para RelativeLayoutActivity -->
            <Button
                android:id="@+id/btnRelativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relativelayout"
                android:layout_marginTop="16dp" />

            <!-- Botón para ConstraintLayoutActivity -->
            <Button
                android:id="@+id/btnConstraintLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/constraintlayout"
                android:layout_marginTop="16dp" />

            <!-- Botón para FrameLayoutActivity -->
            <Button
                android:id="@+id/btnFrameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/framelayout"
                android:layout_marginTop="16dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>